Update call-to-action link in index.html to direct users to the contact page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main class="content">
       <h1>Ryan Styles</h1>
       <h2>Software Engineer</h2>
-      <a href="#" class="cta">View My Work</a>
+      <a href="contact.html" class="cta">Contact Me</a>
     </main>
   </div>
 </body>
