--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/png" href="assets/favicon.png" />
   </head>
   <body>
     <div class="hero">
