--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
   <title>Contact – Ryan Styles</title>
   <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="assets/favicon.png" />
 </head>
 <body>
   <div class="hero">
