--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
-<!DOCTYPE ht    <nav class="navbar">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ryan Styles - Software Engineer</title>
-  <link rel="stylesheet" href="styles.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-</head>
-<body>
-  <div class="hero">
-
-    <nav class="navbar">
-<ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <!-- <li><a href="#">Projects</a></li> -->
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-    <main class="content">
-      <h1>Ryan Styles</h1>
-      <h2>Software Engineer</h2>
-      <a href="contact.html" class="cta">Contact Me</a>
-    </main>
-  </div>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ryan Styles - Software Engineer</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" type="image/png" href="assets/favicon.png" />
+  </head>
+  <body>
+    <div class="hero">
+      <nav class="navbar">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <!-- <li><a href="#">Projects</a></li> -->
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+      <main class="content">
+        <h1>Ryan Styles</h1>
+        <h2>Software Engineer</h2>
+        <a href="contact.html" class="cta">Contact Me</a>
+      </main>
+    </div>
+  </body>
 </html>
