Add footer to about, contact, and index pages; update styles for improved layout

--- a/about.html
+++ b/about.html
@@ -32,8 +32,8 @@
         </div>
         <div class="about-text">
           <p>
-            Hi, I’m Ryan Styles. I'm a software engineer and coding instructor
-            who’s passionate about helping others grow through code. I
+            Hi, I'm Ryan Styles. I'm a software engineer and coding instructor
+            who's passionate about helping others grow through code. I
             specialize in teaching core programming concepts in Python, C, and
             C#, and I focus on making complex ideas clear, approachable, and
             hands-on. Whether it's debugging student projects or whiteboarding
@@ -43,7 +43,7 @@
             Outside the classroom, I enjoy building tools and experimenting with
             modern frameworks like Blazor, .NET, and WebAssembly. I'm always
             looking for ways to blend clean front-end design with solid back-end
-            structure. When I’m not working with code, you can usually find me
+            structure. When I'm not working with code, you can usually find me
             with a strong cup of coffee, customizing my Linux environment, or
             fine-tuning lesson plans to make learning more engaging.
           </p>
@@ -60,6 +60,9 @@
           </div>
         </div>
       </main>
+      <footer class="footer">
+        <p>&copy; 2025 Ryan Styles. All rights reserved.</p>
+      </footer>
     </div>
   </body>
 </html>
