--- a/contact.html
+++ b/contact.html
@@ -60,6 +60,10 @@
         </div>
       </div>
     </main>
+    <footer class="footer">
+      <p>&copy; 2025 Ryan Styles. All rights reserved.</p>
+    </footer>
+
   </div>
   <!-- EmailJS SDK -->
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
