--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <h2>Software Engineer</h2>
         <a href="contact.html" class="cta">Contact Me</a>
       </main>
+      <footer class="footer">
+        <p>&copy; 2025 Ryan Styles. All rights reserved.</p>
+      </footer>
     </div>
   </body>
 </html>
