Fix LinkedIn link in contact.html to include the correct URL scheme

--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
             <span>📧</span>
             ryan.c.styles@gmail.com
           </a>
-          <a href="www.linkedin.com/in/ryan-styles-07345b176" class="contact-link">
+          <a href="https://www.linkedin.com/in/ryan-styles-07345b176" class="contact-link">
             <span>💼</span>
             LinkedIn
           </a>
